src/test/deca/syntax/invalid/printx_variable.synt
printx_variable.deca:11: